# genAIToyExamples

./: .env.example  .gitignore  Dockerfile  I01_localSimpleCall.py  I02_localOCR.py  I03_constants.py  I03_openEvalsLLMAsJudge.py  I04_linkedinCuA.py  I05_llmBasedWebCrawler.py  I05_llmBasedWebCrawlerSimple.py  I05_simpleWebCrawl.py  I06_simpleMCPClient.py  I06_simpleMCPServer.py  I07_mcpLangchain.py  I08_mcpStreamable.py  I09_mcpOpenAI.py  I10_mcpAnthropic.py  I11_mcpuseClient.py  I12_newMcpStreamable.py  I13_newMcpStreamablewithdomain.py  README.md  SERVER_DEPLOYMENT.md  deploy.sh  docker-compose.yml  requirements.txt
adk_tut/: README.md
adk_tut/01-test/basic_agent/: basicagent.py
adk_tut/01-test1/basic_agent/: __init__.py
adk_tut/02-simple/agent_simple/: agent.py
adk_tut/03-withmemory/agent_memory/: agent.py  mainagent.py  my_session.db  mypreferencesagent.py  mypreferencesexecution.py  notesexecution.py
adk_tut/04-multiagents/: execution.py  my_session.db  notesagent.py  preferencesagent.py  rootagent.py
adk_tut/05-callbacks/agent_callback/: agent.py
adk_tut/05-callbacks/model_callback/: agent.py
adk_tut/05-callbacks/tool_callback/: agent.py
mcp_tut/: I01_simple.py  I02_addAuth.py  I03_resourcesprompts.py  README.md  main.py  pyproject.toml
